--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,9 @@
 body {
-  font-family: 'Poppins', sans-serif;
   margin: 0;
-  background-color: #f4f6f8;
+  font-family: "Poppins", sans-serif;
+  background-color: #f8f9fa;
+  min-height: 100vh;
+  color: #0d3b47;
 }
 
 /* Navbar */
